Slider must not use flex-wrap (Recent products carousel fix)

--- a/view/frontend/web/css/source/components/_carousel.less
+++ b/view/frontend/web/css/source/components/_carousel.less
@@ -4,6 +4,9 @@
         position: relative;
     }
     .breeze {
+        .slick-list.product-items {
+            flex-wrap: nowrap;
+        }
         [data-appearance='carousel'],
         .products-grid.slick-initialized {
             position: relative;
